[package]
name = "tokkit"
version = "0.15.5"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
license = "Apache-2.0/MIT"
description = "A simple(simplistic) OAUTH toolkit."
documentation = "https://docs.rs/tokkit"
homepage = "https://github.com/chridou/tokkit"
readme = "README.md"
repository = "https://github.com/chridou/tokkit"
keywords = ["OAUTH2", "token", "token-info", "s2s"]
categories = ["web-programming"]

[dependencies]
log = "0.4"
failure = "0.1"
json = "0.12"
reqwest = "0.9"
backoff = "0.1"
url = "2.1"
hyper = { version = "0.12", optional = true}
tokio-retry = { version = "0.2", optional = true}
futures = { version = "0.1", optional = true }
hyper-tls = { version = "0.3", optional = true }
http = { version = "0.1", optional = true }
metrix = { version = "0.9", optional = true }

[dev-dependencies]
env_logger = "0.7"

[features]
async = ["hyper", "tokio-retry", "futures", "hyper-tls", "http"]
