[package]
name = "tokkit"
version = "0.16.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
license = "Apache-2.0/MIT"
description = "A simple(simplistic) OAUTH toolkit."
documentation = "https://docs.rs/tokkit"
homepage = "https://github.com/chridou/tokkit"
readme = "README.md"
repository = "https://github.com/chridou/tokkit"
keywords = ["OAUTH2", "token", "token-info", "s2s"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
backoff = "0.1"
failure = "0.1"
futures = { version = "0.3", optional = true }
hyper = { version = "0.13", optional = true }
hyper-tls = { version = "0.4", optional = true }
json = "0.12"
log = "0.4"
metrix = { version = "0.10", optional = true }
reqwest = { version = "0.10", features = ["blocking"] }
tokio-retry = { version = "0.2", optional = true, git = "https://github.com/omnioiot/rust-tokio-retry", rev = "732c33d" }
url = "2.1"

[dev-dependencies]
env_logger = "0.7"

[features]
async = ["hyper", "tokio-retry", "futures", "hyper-tls"]
