[package]
name = "tokkit"
version = "0.17.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
license = "Apache-2.0/MIT"
description = "A simple(simplistic) OAUTH toolkit."
documentation = "https://docs.rs/tokkit"
homepage = "https://github.com/chridou/tokkit"
readme = "README.md"
repository = "https://github.com/chridou/tokkit"
keywords = ["OAUTH2", "token", "token-info", "s2s"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
backoff = "0.1"
backoff-futures = { version = "0.2", optional = true }
failure = "0.1"
futures = { version = "0.3", optional = true }
json = "0.12"
log = "0.4"
metrix = { version = "0.10", optional = true }
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1"

[dev-dependencies]
env_logger = "0.7"

[features]
async = ["futures", "backoff-futures"]
